[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_human.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/player_light_mask.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 3, 1 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 20, 3, 0, 5, -14, 1, -5.29426, -8.06528, 8, -19, 23, -16, 31, -6 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -5.29426, -8.06528, -9, -17, 8, -19 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[node name="player" type="KinematicBody2D" groups=[
"player",
]]

visibility/light_mask = 2
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 524293
collision/mask = 5
collision/margin = 0.001
script/script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]

visibility/visible = false
polygon = Vector2Array( -60, -50, 60, -50, 60, 40, -60, 40 )
uv = Vector2Array(  )
color = Color( 0.12549, 0.192157, 0.196078, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="rotate" type="Node2D" parent="."]

[node name="player_human" parent="rotate" instance=ExtResource( 2 )]

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="rotate_hitbox" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="sword_hitbox" type="Area2D" parent="rotate_hitbox"]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 3 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rotate_hitbox/sword_hitbox"]

build_mode = 0
polygon = Vector2Array( -9, -17, 8, -19, 23, -16, 31, -6, 20, 3, 0, 5, -14, 1, -5.29426, -8.06528 )
shape_range = Vector2( 0, 1 )
trigger = false
__meta__ = {
"_edit_lock_": true
}

[node name="falling_area" type="Area2D" parent="rotate_hitbox"]

transform/pos = Vector2( 0, -1 )
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -2, 1 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 524288
collision/mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotate_hitbox/falling_area"]

transform/pos = Vector2( -2, 1 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="damagebox" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="damagebox"]

transform/pos = Vector2( 0, -3 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="itembox" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 4
collision/mask = 4
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="itembox"]

transform/pos = Vector2( 0, -3 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="keybox" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 8
collision/mask = 8
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="keybox"]

transform/pos = Vector2( 0, -3 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0
__meta__ = {
"_edit_lock_": true
}

[node name="transformation_particles" type="Particles2D" parent="."]

transform/pos = Vector2( 0, -7 )
config/amount = 200
config/lifetime = 3.0
config/time_scale = 4.0
config/emit_timeout = 3.0
config/emitting = false
config/process_mode = 1
config/half_extents = Vector2( 4, 12 )
config/local_space = false
config/explosiveness = 0.5
params/direction = 0.0
params/spread = 180.0
params/linear_velocity = 3.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 3.0
params/final_size = 1.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 1.0
randomness/linear_velocity = 1.0
randomness/initial_size = 1.0
randomness/hue_variation = 0.05
color/color = Color( 0.632812, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="transformation_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[node name="Light2D" type="Light2D" parent="."]

enabled = true
editor_only = false
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
scale = 1.0
color = Color( 1, 0.868958, 0.558594, 1 )
energy = 0.8
mode = 0
range/height = 0.0
range/z_min = -1024
range/z_max = 1024
range/layer_min = 0
range/layer_max = 0
range/item_mask = 2
shadow/enabled = false
shadow/color = Color( 0, 0, 0, 0 )
shadow/buffer_size = 2048
shadow/esm_multiplier = 80.0
shadow/item_mask = 1

[node name="visibility_to_enemies_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_enter" from="rotate_hitbox/sword_hitbox" to="." method="_on_sword_hitbox_area_enter"]

[connection signal="area_exit" from="rotate_hitbox/sword_hitbox" to="." method="_on_sword_hitbox_area_exit"]

[connection signal="area_enter" from="rotate_hitbox/falling_area" to="." method="_on_falling_area_area_enter"]

[connection signal="area_exit" from="rotate_hitbox/falling_area" to="." method="_on_falling_area_area_exit"]

[connection signal="area_enter" from="keybox" to="." method="_on_keybox_area_enter"]

[connection signal="timeout" from="transformation_timer" to="." method="_on_transformation_timer_timeout"]

[connection signal="timeout" from="visibility_to_enemies_timer" to="." method="_on_visibility_to_enemies_timer_timeout"]


